feat: add delete functionality and refactor
* Add delete change set
* Add delete change set element
* Reintroduce latestRequest ref to have proper value in functions
* Change "reject" to "undo"
* Refactor change set file element to use a service for file logic

--- a/packages/ai-chat-ui/src/browser/style/index.css
+++ b/packages/ai-chat-ui/src/browser/style/index.css
@@ -280,6 +280,18 @@ div:last-child > .theia-ChatNode {
   text-overflow: ellipsis;
 }
 
+.theia-ChatInput-ChangeSet-Header-Actions .codicon.action {
+  font-size: 18px;
+  height: 20px;
+  vertical-align: middle;
+  margin-left: 4px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.theia-ChatInput-ChangeSet-Header-Actions .codicon.action:hover {
+  background-color: var(--theia-toolbar-hoverBackground);
+}
+
 .theia-ChatInput-ChangeSet-title.rejected {
   text-decoration: line-through;
 }
