--- a/packages/ai-chat-ui/src/browser/style/index.css
+++ b/packages/ai-chat-ui/src/browser/style/index.css
@@ -7,8 +7,8 @@
   flex: 1;
 }
 
-.chat-input-widget>.ps__rail-x,
-.chat-input-widget>.ps__rail-y {
+.chat-input-widget > .ps__rail-x,
+.chat-input-widget > .ps__rail-y {
   display: none !important;
 }
 
@@ -23,7 +23,7 @@
   overflow-wrap: break-word;
 }
 
-div:last-child>.theia-ChatNode {
+div:last-child > .theia-ChatNode {
   border: none;
 }
 
@@ -59,7 +59,6 @@ div:last-child>.theia-ChatNode {
 }
 
 @keyframes dots {
-
   0%,
   20% {
     content: "";
@@ -122,7 +121,7 @@ div:last-child>.theia-ChatNode {
   padding-inline-start: 1rem;
 }
 
-.theia-ChatNode li>p {
+.theia-ChatNode li > p {
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -136,7 +135,7 @@ div:last-child>.theia-ChatNode {
   font-size: var(--theia-code-font-size);
 }
 
-.theia-RequestNode>p div {
+.theia-RequestNode > p div {
   display: inline;
 }
 
@@ -162,6 +161,67 @@ div:last-child>.theia-ChatNode {
   width: 100%;
   box-sizing: border-box;
   gap: 4px;
+}
+
+.theia-ChatInput-ChatContext ul {
+  list-style-type: none;
+  padding: 0px 4px 8px 8px;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 6px;
+}
+
+.theia-ChatInput-ChatContext-Element {
+  display: flex;
+  align-items: center;
+  border-radius: calc(var(--theia-ui-padding) * 2 / 3);
+  border: var(--theia-border-width) solid var(--theia-dropdown-border);
+  padding: 2px 4px 2px 6px;
+  height: 18px;
+  line-height: 16px;
+  min-width: 0;
+}
+
+.theia-ChatInput-ChatContext-title {
+  flex: 10 1 auto;
+  min-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.theia-ChatInput-ChatContext-additionalInfo {
+  color: var(--theia-disabledForeground);
+  font-size: calc(var(--theia-content-font-size) * 0.8);
+  margin-left: 4px;
+  line-height: 18px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  flex: 1 10 auto;
+  min-width: 0;
+}
+
+.theia-ChatInput-ChatContext-Element .action {
+  cursor: pointer;
+  margin-left: 4px;
+  border-radius: 4px;
+  flex-shrink: 0;
+}
+
+.theia-ChatInput-ChatContext-Element .action:hover {
+  background-color: var(--theia-toolbar-hoverBackground);
+}
+
+.theia-ChatInput-ChatContext-Icon {
+  display: inline;
+  line-height: 18px;
+  flex-shrink: 0;
+}
+
+.theia-ChatInput-ChatContext-Icon.codicon {
+  margin-right: 6px;
 }
 
 .theia-ChatInput-ChangeSet-Box {
@@ -252,7 +312,8 @@ div:last-child>.theia-ChatNode {
   text-align: center;
 }
 
-.theia-ChatInput-ChangeSet-List .theia-ChatInput-ChangeSet-Icon.codicon::before {
+.theia-ChatInput-ChangeSet-List
+  .theia-ChatInput-ChangeSet-Icon.codicon::before {
   font-size: var(--theia-ui-font-size1);
 }
 
@@ -466,7 +527,8 @@ div:last-child>.theia-ChatNode {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  border: var(--theia-border-width) solid var(--theia-sideBarSectionHeader-border);
+  border: var(--theia-border-width) solid
+    var(--theia-sideBarSectionHeader-border);
   padding: 8px 12px 12px;
   border-radius: 5px;
   margin: 0 0 8px 0;
